--- a/ui/website/src/allBlocks/HeadingComponent/Headingcomponent.css
+++ b/ui/website/src/allBlocks/HeadingComponent/Headingcomponent.css
@@ -18,20 +18,19 @@
 
 .career_line_subhead{
     font-size: 30px;
-    margin-top: 34px;
-    padding-bottom: 35px;
+    margin-top: 102px;
+    padding-bottom: 0px;
   }
 
   .career_line_paraone{
-    line-height: 23px;
-    letter-spacing: 1px;
     padding-bottom: 46px;
-    padding-top: 10px;
+    padding-top: 32px;
+    font-size: 20px;
 }
 
 .career_intro_img{
-    width: 68%;
-    margin-top: 38px;
+    width: 84%;
+    margin-top: 0px;
     margin-left: 64px;
   }
 
@@ -114,7 +113,7 @@
 }*/
 
 .colorblue_txt{
-	color: #00bfff;
+	color: #009de2;
 }
 
 .career1_img{
@@ -123,5 +122,11 @@ padding-right: 45px;
 }
 
 
+.line_headd hr {
+    height: 2px;
+    width: 100px;
+    border: 1px solid #f19000;
+    background-color: #f19000;
+}
 
 
