--- a/ui/website/src/allBlocks/Maincomponent/Maincomponent.css
+++ b/ui/website/src/allBlocks/Maincomponent/Maincomponent.css
@@ -11,23 +11,26 @@
 }
 .iogimgblock1{
     width: 96%;
-    padding-top: 143px;
+    /* padding-top: 143px; */
     padding-left: 69px;
     margin-left: 52px;
+    height: 389px;
 }
 
 .iogblock1text{
-    padding-top: 112px;font-weight: normal;
+    padding-top: 112px; 
+    font-weight: normal;
     font-style: normal;
     /* font-size: 115px; */
     line-height: 1;
     margin-bottom: 4px;
     color: #000000bd;
-    padding-bottom: 136px;
+    /* padding-bottom: 136px; */
     font-size: 15px;
     padding-left: 55px;
-    margin-top: 144px;
-    padding-bottom: 150px;
+    /* margin-top: 144px; */
+    /* padding-bottom: 150px; */
+    height: 399px;
 }
 
 .iogblock1text span{
@@ -35,20 +38,22 @@
   font-weight: bold;
 }
 .iogimgblock2{
-    width: 95%;
-    padding-top: 77px;
-    padding-left: 69px;
-    margin-left: -48px;
+   width: 81%;
+    padding-top: 90px;
+    padding-left: 15px;
+    margin-left: 1px;
+    height: 747px;
 }
 
 .iogblock2text{
-    padding-top: 115px;
-    padding-bottom: 112px;
+    padding-top: 91px;
+    /* padding-bottom: 112px; */
     font-size: 15px;
     padding-left: 86px;
-    margin-top: 77px;
-    margin-left: 90px;
-    width: 94%; 
+    margin-top: 91px;
+    margin-left: 106px;
+    width: 94%;
+    height: 294px;
 }
 
 .iogblock2text span{
@@ -60,21 +65,20 @@
 }
 
 .iogimgblock3{
-    margin-top: -472px;
-    width: 95%;
-    padding-top: 84px;
-    padding-left: 69px;
-    margin-left: 36px;
+    width: 99%;
+    padding-left: 76px;
+    margin-left: 29px;
+    height: 362px;
 }
 
 .iogblock3text{
-    padding-top: 124px;
-    padding-bottom: 35px;
     font-size: 15px;
-    padding-left: 111px;
-    margin-top: -358px;
-    margin-left: -5px;
-    width: 110%;
+    padding-left: 87px;
+    margin-left: 8px;
+    width: 107%;
+    height: 362px;
+    padding-top: 97px;
+    /* margin-top: 82px; */
 }
 
 .iogblock3text span{
@@ -128,13 +132,13 @@
 }
 
 .iogblock4text{
-    padding-top: 35px;
+   padding-top: 35px;
     font-size: 15px;
     padding-left: 86px;
-    margin-top: -28px;
+    /* margin-top: -28px; */
     margin-left: 105px;
-    width: 82%;
-    padding-bottom: 35px;
+    width: 86%;
+    padding-bottom: 35px;;
 }
 
 .iogblock4text span{
@@ -151,14 +155,18 @@
     margin-left: 14px;
     margin-top: -20px;
 }
+.head_firstblock{
+
+}
 .firstblockk{
-    padding-top: 17px;
+   padding-top: 28px;
 }
 .secondblockk{
-    padding-top: 17px;
-}
+    padding-top: 16px;
+    }
 .thirdblockk{
-    padding-top: 17px;
+    
+    margin-top: 17px;
 }
 
 .content_sizee{
@@ -175,12 +183,42 @@
 }
 
 .iogimg_4{
-  width: 89%;
-  height: 307px;
-  margin-left: 14px;
-  margin-top: -20px;
+    width: 88%;
+    height: 315px;
+    margin-left: 28px;
+    /* margin-top: -20px; */
+    padding-right: 5px;
+    /* margin-top: -20px; */
 }
 
 .fourthblockk{
    padding-top: 17px;
+}
+
+.center_block_text{
+
+}
+
+.blckk_imgg{
+    margin-left: 23px;
+    margin-top: 81px;
+    width: 79%;
+}
+
+.ht_row2{
+        height: 290px;
+}
+
+.ht_row1{
+      height: 393px;  
+}
+.ht_row3{
+        
+}
+.ht_row4{
+        
+}
+
+.ht_top{
+    margin-top: 82px;
 }
