--- a/ui/website/src/allPages/IndustriesPage/IndustriesPage.css
+++ b/ui/website/src/allPages/IndustriesPage/IndustriesPage.css
@@ -8,3 +8,16 @@ body{
 div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
 	font-family: 'Raleway', sans-serif;
 }
+
+.industrybg1{
+	background-image: url("/images/serviceback1.png");
+	background-size: 100% 100%;
+	background-repeat: no-repeat;
+	/*width: 100%;*/
+}
+.industrybg2{
+	background-image: url("/images/serviceback2.png");
+	background-size: 100% 70%;
+	background-repeat: no-repeat;
+	/*width: 100%;*/
+}
