--- a/ui/website/src/allPages/ResourcePage/ResourcePage.css
+++ b/ui/website/src/allPages/ResourcePage/ResourcePage.css
@@ -8,3 +8,10 @@ body{
 div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
 	font-family: 'Raleway', sans-serif;
 }
+
+.resourcebg1{
+	background-image: url("/images/serviceback1.png");
+	background-size: 100% 100%;
+	background-repeat: no-repeat;
+	/*width: 100%;*/
+}
