Manali refined changes of Resources Page

--- a/ui/website/src/allBlocks/Resourceprivacy/Resourceprivacy.css
+++ b/ui/website/src/allBlocks/Resourceprivacy/Resourceprivacy.css
@@ -1,3 +1,24 @@
 .center_block{
 	padding-left: 78px;
 }
+
+.blckk-ht{
+	height: 240px;
+}
+
+.resource_blck{
+    border-radius: 4px;
+    box-shadow: 0 10px 29px rgba(92,141,255,.22);
+    margin-bottom: 50px;
+    margin-top: 58px;
+    text-align: center;
+}
+
+.resource_txt{
+    margin-top: 56px;
+    font-size: 20px;
+}
+
+.resource_para{
+	    padding-top: 73px;
+}
