--- a/ui/website/src/common/Header/Header.css
+++ b/ui/website/src/common/Header/Header.css
@@ -1,9 +1,9 @@
-/*.headerflow{
+.headerflow{
   position: fixed;
   z-index: 10000;
   background-color: #fff;
   height: 100px;
-}*/
+}
 
 #container {
   margin: 0 auto;
@@ -14,7 +14,7 @@
  display: none;
 }
 nav {
-  margin-top: 30px;
+  margin-top: 45px;
   padding: 0;
   /*background-color: #254441;*/
 }
@@ -46,6 +46,7 @@ nav ul li {
   display: inline-block;
   float: left;
   background-color: #fff;
+  width: auto;
 }
 
 nav a {
@@ -53,7 +54,7 @@ nav a {
   padding: 0 13px;
   color: #000;
   font-size: 15px;
-  line-height: 60px;
+  line-height: 35px;
   text-decoration: none;
   text-transform: uppercase;
   font-weight: bold;
@@ -67,23 +68,31 @@ text-decoration: none; }
 nav ul ul {
   display: none;
   position: absolute;
-  top: 60px;
+  top: 35px;
+  left: 0px;
 }
 
 nav ul li:hover > ul { display: inherit; }
 
 nav ul ul li {
-  width: 500px;
+  width: auto;
   float: none;
   display: list-item;
   position: relative;
 }
 
 nav ul ul ul li {
+  width:313px;
   position: relative;
-  top: -60px;
+  top: -35px;
   left: 270px;
-  z-index: 100;
+}
+nav ul ul ul ul li {
+  width:310px;
+  position: relative;
+  top: -35px;
+  left: 270px;
+  z-index: 100!important;
 }
 
 /*li > a:after { content: ' +'; }*/
@@ -174,8 +183,8 @@ nav ul li {
   height: 80px;
 }
 
-#drop-3{
-  z-index: 111;
+.zindex{
+  z-index: 1;
 }
 
 
