Amit added changes

--- a/ui/website/src/App.css
+++ b/ui/website/src/App.css
@@ -140,7 +140,7 @@ body{
     text-align: center;
     background-color: #fff;
     /*padding: 30px 0;*/
-    /*height: 300px;*/
+    height: 375px;
 }
 .price {
     margin-top: 10px;
