--- a/ui/website/src/allBlocks/Upstream/Upstream.css
+++ b/ui/website/src/allBlocks/Upstream/Upstream.css
@@ -1,6 +1,7 @@
 .upstreamtext{
-    padding: 10px 63px;
-    letter-spacing: 0.5px;
+    padding: 10px 40px;
+    /*letter-spacing: 0.5px;*/
+    height: 120px;
   }
 
 
