--- a/ui/website/src/common/Header/Header.css
+++ b/ui/website/src/common/Header/Header.css
@@ -1,9 +1,9 @@
-/*.headerflow{
+.headerflow{
   position: fixed;
   z-index: 10000;
   background-color: #fff;
-  height: 100px;
-}*/
+  height: auto;
+}
 
 #container {
   margin: 0 auto;
