--- a/ui/website/src/allBlocks/Overview/Overview.css
+++ b/ui/website/src/allBlocks/Overview/Overview.css
@@ -2,6 +2,7 @@
     margin-bottom: -1px;
     font-size: 50px;
     font-weight: 700;
+    margin-top: 32px;
 }
 
 .line_paraaaa{
@@ -17,4 +18,13 @@
 
 .bluetext {
     color: #1378d4;
+}
+
+.line_overview {
+    background-color: #f19000;
+    width: 105px;
+    margin-top: 143px;
+    height: 4px;
+    /* margin-left: 500px; */
+    text-align: center;
 }
