--- a/ui/website/src/allBlocks/HeadingComponent/Headingcomponent.css
+++ b/ui/website/src/allBlocks/HeadingComponent/Headingcomponent.css
@@ -23,7 +23,7 @@
 
 .career_line_subhead{
     font-size: 50px;
-    margin-top: 108px;
+    margin-top: 15px;
     padding-bottom: 0px;
     padding-left: 12px;
   }
@@ -36,10 +36,11 @@
 }
 
 .career_intro_img{
-    width: 84%;
-    margin-top: 82px;
+    width: 73%;
+    margin-top: 0px;
     margin-left: 64px;
-  }
+}
+  
 
 .butt_1 {
     background-color: #003bb3;
@@ -136,11 +137,11 @@ padding-right: 45px;
     background-color: #f19000;
 }
 
-.lineee1 {
+.career_linee_1 {
     background-color: #f19000;
     width: 105px;
     height: 4px;
-    margin-top: 55px;
+    margin-top: 165px;
     margin-left: 69px;
 }
 
