--- a/ui/website/src/allBlocks/Ourjournyblock/Ourjournyblock.css
+++ b/ui/website/src/allBlocks/Ourjournyblock/Ourjournyblock.css
@@ -134,7 +134,7 @@ color: #fff;
     z-index: 100;
     height: 75px;
     top: 324px;
-    opacity: 1;
+    opacity: 0;
 }
 .add9{
   position: relative;
@@ -161,4 +161,73 @@ color: #fff;
   transform: rotateY(360deg);
   }
   
+}
+
+.Journycaro1{
+    z-index: 1000;
+    position: absolute;
+    top: 230px;
+    left: 630px;
+    opacity: 0;
+}
+.Journycaro2{
+    z-index: 1000;
+    position: absolute;
+    top: 483px;
+    left: 819px;
+    opacity: 0;
+}
+.Journycaro3{
+    z-index: 1000;
+    position: absolute;
+    top: 515px;
+    left: 177px;
+    opacity: 0;
+}
+.Journycaro4{
+    z-index: 1000;
+    position: absolute;
+    top: 754px;
+    left: 265px;
+    opacity: 0;
+}
+.Journycaro5{
+   z-index: 1000;
+    position: absolute;
+    top: 1024px;
+    left: 220px;
+    opacity: 0;
+}
+.Journycaro6{
+   z-index: 1000;
+    position: absolute;
+    top: 805px;
+    left: 724px;
+    opacity: 0;
+}
+.Journycaro7{
+    z-index: 1000;
+    position: absolute;
+    top: 1327px;
+    left: 730px;
+    opacity: 0;
+}
+.Journycaro8{
+    z-index: 1000;
+    position: absolute;
+    top: 1166px;
+    left: 70px;
+    opacity: 0;
+}
+.Journycaro9{
+    z-index: 1000;
+    position: absolute;
+    top: 1438px;
+    left: 372px;
+    opacity: 0;
+}
+
+.journyanim{
+  opacity: 1;
+  transition-duration: 0.5s;
 }
