Manali refined changes into Energy Mangament Page

--- a/ui/website/src/allBlocks/Primarystrategies/Primarystrategies.css
+++ b/ui/website/src/allBlocks/Primarystrategies/Primarystrategies.css
@@ -38,13 +38,14 @@
  }
 
  .strategy_img{
-    width: 100%;
+    width: 59%;
+    margin-top: 59px;
  }
 
  .ps_img{
-        width: 692px;
-    height: 271px;
-    margin-left: 200px;
+    width: 476px;
+    height: 299px;
+    margin-left: 280px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19), 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     text-align: center;
  }
