--- a/ui/website/src/allPages/AboutUs/AboutUs.css
+++ b/ui/website/src/allPages/AboutUs/AboutUs.css
@@ -212,7 +212,7 @@
 padding-bottom: 31px;
   } 
   .vision_align1{
-padding-top: 16px;
+/*padding-top: 16px;*/
   }
 
   .txt-size-director{
@@ -220,25 +220,24 @@ padding-top: 16px;
     
   } 
   .txt-size-founder{
-    font-weight: 500;
+    font-weight: 700;
     font-size: 27px;
-    color: #fff;
+    
   }
  .head_spacing{
-margin-top: 54px;
+margin-top: 100px;
 }
 
  .para_spacing{
-    margin-top: 18px;
-    margin-bottom: 25px;
-    color: #fff;
+    font-size: 20px;
+    padding: 18px 135px 22px 0px;
     
   }
 
   .line_subhead{
     /*font-weight: 600;*/
     font-size: 28px;
-    margin-top: 25px;
+    /*margin-top: 25px;*/
     color: #000;
   }
 
@@ -250,23 +249,26 @@ margin-top: 54px;
 }
 .line_para1{
     line-height: 23px;
-    letter-spacing: 1px;
+    letter-spacing: 0.5px;
     margin-top: 228px;
-    padding-right: 110px;
-    margin-left: 50px
+    /* padding-right: 110px; */
+    margin-left: 50px;
+    font-size: 18px;
 }
 
 .line_para2{
     line-height: 25px;
     letter-spacing: 1px;
     font-size: 19px;
+    color: #000;
 }
 .line_para3{
     line-height: 23px;
-    letter-spacing: 1px;
+    letter-spacing: 0.5px;
     margin-top: 188px;  
-    color: #fff;
-    margin-left: 115px;
+    color: #000;
+    margin-left: 52px;
+    font-size: 18px;
   }
 .line_para4{
     line-height: 23px;
@@ -274,12 +276,14 @@ margin-top: 54px;
 }
 .para-top3{
   font-size: 50px;
-  margin-top: 95px;
+  margin-top: 160px;
 }
 
 .alg_lft{
-      margin-left: -22px;
-      color: #fff;
+      /*margin-left: -22px;*/
+      padding-inline-start: 25px!important;
+    font-size: 20px;
+    padding: 0 125px 10px 10px;
 }
 
 .blck{
@@ -328,7 +332,7 @@ margin-top: 54px;
 }
 
 .line_ht{
-  line-height: 2;
+  line-height: 30.8px;
   margin-bottom: 10px;
 }
 
@@ -362,9 +366,9 @@ margin-top: 54px;
 }
 
 .truck{
-    width: 68%;
+    width: 100%;
     margin-top: 126px;
-    margin-left: 113px;
+    /*margin-left: 113px;*/
 }
 
 .plane{
@@ -374,10 +378,11 @@ margin-top: 54px;
 }
 
 .director_img{
-  width: 36%;
-  margin-left: 171px;
-  margin-top: 195px;
+  width: 100%;
+  /* margin-left: 171px; */
+  margin-top: 235px;
   border: 9px solid #fff;
+  box-shadow: 0 10px 29px rgba(92,141,255,0.5);
 }
 .curve_img{
     width: 100%;
@@ -446,7 +451,7 @@ margin-top: 54px;
 }
 
 .bckgrnd_curve_img {
-  background-image: url("/images/6.png");
+  background-image: url("/images/Founder-Profiles.png");
   background-size: 100% 100%;
   background-size: 100% 100%;
   height: 550px !important;
@@ -454,9 +459,9 @@ margin-top: 54px;
 }
 
 .backgrd_curve1{
-  background-image: url("/images/6.png");
+  background-image: url("/images/Founder-Profiles.png");
   background-size: 100% 100%;
-  height: 580px;
+  height: 780px;
  /* height: 352px;*/
 }
 
