--- a/ui/website/src/allPages/ContactPage/Contactpage.css
+++ b/ui/website/src/allPages/ContactPage/Contactpage.css
@@ -3,11 +3,13 @@
 	/*margin-top: 30px;*/
 }
 .contactcontent2-wrap{
-  /*margin:30px 0px;*/
+  margin-top:150px;
+  margin-bottom: 100px;
   color: #fff;
   /*background-image: url("/images/contactusbg.png");*/
   background-size: 100% 100%;
-  height: 700px;
+  height: 800px;
+  background-color: #eee;
 }
 .contactcontent{
 margin-bottom: 50px;
@@ -15,7 +17,7 @@ margin-bottom: 50px;
 
 .contactcontent span{
  font-weight: bold;
- font-size: 40px;
+ font-size: 50px !important;
  }
  .us{
   font-weight: 100!important;
@@ -48,9 +50,9 @@ margin-bottom: 50px;
 
 .contacticon2{
     padding: 5px 6px;
-    background-color: #003bb3;
+    background-color: #005b99;
     font-size: 35px;
-    border: 5px solid #003bb3;
+    border: 5px solid #005b99;
     border-radius: 50%
 }
 .contacticon21{
@@ -81,7 +83,7 @@ margin-bottom: 50px;
   /*margin-top: 70px;*/
 } 
 .contacttextmargin2{
-  /*margin-top: 120px;*/
+  margin-top: 100px;
 } 
 .contacttextmargin h4{
   text-transform: capitalize;
@@ -138,7 +140,7 @@ margin-bottom: 50px;
 }
 
 .contacticonwrap{
-  /*margin-top: 245px;*/
+  margin-top: 50px;
 }
 
 .contacticons{
