Amit added changes

--- a/ui/website/src/App.css
+++ b/ui/website/src/App.css
@@ -493,8 +493,8 @@
 .pricebtn1,.pricebtn2,.pricebtn3,.pricebtn4{
     /*background-color: #367588;*/
     border-radius: 4px;
-    /*font-size: 12px;*/
-    /*font-weight: 700;*/
+    font-size: 13px;
+    font-weight: 700;
     padding: 8px 20px;
     /*color: #fff !important;*/
     margin-bottom: 5px;
