--- a/ui/website/src/allBlocks/Resourcevideo/Resourcevideo.css
+++ b/ui/website/src/allBlocks/Resourcevideo/Resourcevideo.css
@@ -5,3 +5,124 @@
 .mt70{
 	margin-top: 70px;
 }
+
+
+
+.go-corner {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  width: 32px;
+  height: 32px;
+  overflow: hidden;
+  top: 0;
+  right: 0;
+  background-color: #00838d;
+  border-radius: 0 4px 0 32px;
+}
+
+.go-arrow {
+  margin-top: -4px;
+  margin-right: -10px;
+  color: white;
+  font-size: 25px;
+  transform: rotate(90deg);
+}
+
+.videocard {
+  display: block;
+  position: relative;
+  background-color: #f2f8f9;
+  border-radius: 4px;
+  padding: 32px 24px;
+  margin: 12px;
+  height: 200px;
+  text-decoration: none;
+  z-index: 0;
+  overflow: hidden;
+}
+
+.videocard:before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    top: -16px;
+    right: -16px;
+    background: #00838d;
+    height: 32px;
+    width: 36px;
+    border-radius: 32px;
+    transform: scale(1);
+    transform-origin: 50% 50%;
+    transition: transform 0.25s ease-out;
+  }
+
+  .videocard:hover:before {
+    transform: scale(21);
+  }
+
+.videocard:hover p{
+    transition: all 0.3s ease-out;
+    color: rgba(255, 255, 255, 0.8);  
+}
+
+.videocard:hover h3 {
+    transition: all 0.3s ease-out;
+    color: #ffffff;
+  }
+.videocard:hover{
+	text-decoration: none;
+}
+.videocard:focus{
+	text-decoration: none;
+}
+
+.videocard1{
+  display: block;
+  position: relative;
+  background-color: #f2f8f9;
+  border-radius: 4px;
+  padding: 32px 24px;
+  margin: 12px;
+  height: 272px;
+  text-decoration: none;
+  z-index: 0;
+  overflow: hidden;
+}
+
+.videocard1:before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    top: -16px;
+    right: -16px;
+    background: #00838d;
+    height: 32px;
+    width: 50px;
+    border-radius: 32px;
+    transform: scale(1);
+    transform-origin: 50% 50%;
+    transition: transform 0.25s ease-out;
+  }
+
+  .videocard1:hover:before {
+    transform: scale(21);
+  }
+
+.videocard1:hover p{
+    transition: all 0.3s ease-out;
+    color: rgba(255, 255, 255, 0.8);  
+}
+
+.videocard1:hover h3 {
+    transition: all 0.3s ease-out;
+    color: #ffffff;
+  }
+.videocard1:hover{
+  text-decoration: none;
+}
+.videocard1:focus{
+  text-decoration: none;
+}
+
