Amit added changes

--- a/ui/website/src/allBlocks/Overview/Overview.css
+++ b/ui/website/src/allBlocks/Overview/Overview.css
@@ -24,6 +24,7 @@
     background-color: #f19000;
     width: 105px;
     margin-top: 143px;
+    margin-bottom: 15px;
     height: 4px;
     /* margin-left: 500px; */
     text-align: center;
