--- a/ui/website/src/allBlocks/Challenges/Challenges.css
+++ b/ui/website/src/allBlocks/Challenges/Challenges.css
@@ -15,13 +15,7 @@
     font-weight: bold;
   }
 
- .grey_line{
-    width: 86%;
-    margin-left: 74px;
-    background-color: #808080;
-  }
-
-  .challenges_list{
+   .challenges_list{
   	font-size: 19px;
     color: #7b6f6f;
     background-repeat: no-repeat;
@@ -31,5 +25,5 @@
     line-height: 30px;
     font-size: 19px;
     color: #7b6f6f;
-    margin-left: 15px;
+    /*margin-left: 15px;*/
 }
