--- a/ui/website/src/allBlocks/Commonulliblock/Commonulliblock.css
+++ b/ui/website/src/allBlocks/Commonulliblock/Commonulliblock.css
@@ -17,9 +17,10 @@
     color: #3a3737;
  }
 
- .grey_line1{
-    width: 86%;
-    margin-left: 74px;
+ .grey_line1 hr{
+    /*width: 100%;*/
+    height: 1px;
+    /*margin-left: 74px;*/
     background-color: #808080;
   }
 
@@ -27,11 +28,11 @@
     font-size: 19px;
     color: #7b6f6f;
     background-repeat: no-repeat;
-    margin-left: 78px;
+    /*margin-left: 78px;*/
   }
 
 .refinery_sublist{
-  margin-left: 88px;
+    /*margin-left: 15px;*/
     font-size: 19px;
     line-height: 28px;
     color: #7b6f6f;
