--- a/ui/website/src/allBlocks/Commonulliblock/Commonulliblock.css
+++ b/ui/website/src/allBlocks/Commonulliblock/Commonulliblock.css
@@ -21,7 +21,7 @@
     /*width: 100%;*/
     height: 1px;
     /*margin-left: 74px;*/
-    background-color: #808080;
+    background-color: transparent;
   }
 
  .refinery_list{
