--- a/ui/website/src/allBlocks/BlogPagecomponent/BlogPagecomponent.css
+++ b/ui/website/src/allBlocks/BlogPagecomponent/BlogPagecomponent.css
@@ -1,23 +1,22 @@
 
-
-
-
-/* */
-
-.panel-default>.panel-heading {
+.customDefaultPanel>.panel-heading {
   color: #333;
   background-color: #fff;
-  border-color: #e4e5e7;
   padding: 0;
   user-select: none;
+  border: none !important;
 }
+.customDefaultPanel{
+    border: none !important;
+    border-bottom: none !important;
 
-.panel-default>.panel-heading a {
+}
+.customDefaultPanel>.panel-heading a {
   display: block;
   padding: 10px 15px;
 }
 
-.panel-default>.panel-heading a:after {
+.customDefaultPanel>.panel-heading a:after {
   content: "";
   position: relative;
   top: 1px;
@@ -33,22 +32,106 @@
   -webkit-transition: -webkit-transform .25s linear;
 }
 
-.panel-default>.panel-heading a[aria-expanded="true"] {
-  background-color: #eee;
+.customDefaultPanel>.panel-heading a[aria-expanded="true"] {
+  background-color: #fff;
+  border-radius: 5px !important;
+
+  color: #fff;
+}
+.customDefaultPanel>.panel-heading a[aria-expanded="true"] .blogImgContainer{
+  display:  none !important;
 }
 
-.panel-default>.panel-heading a[aria-expanded="true"]:after {
-  content: "\2212";
-  -webkit-transform: rotate(180deg);
-  transform: rotate(180deg);
+.customDefaultPanel>.panel-heading a[aria-expanded="true"]:after {
+    content: "\2212";
+    margin-right: 50px;
+    padding: 35px;
+    margin-top: -95px;
+    border-radius: 5px;
+    background-color: #0076d8;
+    color:#fff;
+
+    transform: rotate(180deg);
 }
 
-.panel-default>.panel-heading a[aria-expanded="false"]:after {
-  content: "\002b";
-  -webkit-transform: rotate(90deg);
-  transform: rotate(90deg);
-}
+.customDefaultPanel>.panel-heading a[aria-expanded="false"]:after {
+    content: "\002b";
+    margin-right: 50px;
+    margin-top: -95px;
+    padding: 35px;
+    box-shadow: 5px -7px 4px -1px #cde2f3;
 
+    border-radius: 5px;
+    background-color: #0076d8;
+    color:#fff;  transform: rotate(90deg);
+}
+.panel-group .panel+.panel{
+margin-top: 24px !important;
+}
 .panel-body{
   color: #000;
+      background-color: #fff !important;
+  box-shadow: 0 10px 29px rgba(92,141,255,.22);
+}
+/*PL*/
+.customPanel{
+  height: 250px !important;
+  border-radius: 10px !important;
+  box-shadow: 0 10px 29px rgba(92,141,255,.22);
+
+}
+.mt80{
+  margin-top:70px !important;
+}
+.customPanel label{
+  
+  margin-top:8px;
+  margin-left: 20px;
+}
+.customPanel a{
+  text-decoration: none !important;
+}
+.blogImgContainer{
+  height: 220px;
+  border-radius: 10px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+
+}
+.blogImgContainerInner{
+  height: 550px;
+  border-radius: 10px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+
+}
+.blogImgContainer img{
+  height: 100%;
+  width: 100%;
+    border-radius: 5px;
+
+}.blogImgContainerInner img{
+  height: 550px;
+  width: 100%;
+    border-radius: 5px;
+
+}
+.blogTitle{
+  font-size: 25px;
+  color: #0076d8 !important;
+}
+.likeDiv{
+  color:#777;
+  font-size: 20px;
+  font-weight: normal;
+}
+.blogDate{
+  color:#777;
+  font-size: 20px;
+}
+.panel-group .panel-heading+.panel-collapse>.list-group, .panel-group .panel-heading+.panel-collapse>.panel-body{
+  border: none !important;
+}
+.panel-collapse  +.panel-heading>.blogImgContainerInner{
+  display:none;
 }
