--- a/ui/website/src/allPages/ContactPage/Contactpage.css
+++ b/ui/website/src/allPages/ContactPage/Contactpage.css
@@ -9,7 +9,7 @@
   /*background-image: url("/images/contactusbg.png");*/
   background-size: 100% 100%;
   height: 800px;
-  background-color: #eee;
+  background-color: #fff;
 }
 .contactcontent{
 margin-bottom: 50px;
@@ -107,7 +107,7 @@ margin-bottom: 50px;
   height: 80px;
 }
 .formcontent1{
-  height: 120px;
+  height: 138px;
 }
 
 
@@ -146,4 +146,16 @@ margin-bottom: 50px;
 .contacticons{
   margin-top: 5px;
 }
-
+.sxSelectHeader__Xlz5r{
+    margin-bottom: 0px !important;
+    height: 35px !important;
+    border-bottom-left-radius: 0px;
+    border-top-left-radius: 0px;
+    padding-left: 9px;
+}
+.separatorWrapper__eH30j{
+  width:25%;
+}
+..sxSelectPlaceholder__1-20v{
+  line-height: 1.2px !important;
+}
