Amit added changes

--- a/ui/website/src/allPages/IndustriesPage/IndustriesPage.css
+++ b/ui/website/src/allPages/IndustriesPage/IndustriesPage.css
@@ -12,3 +12,11 @@
 	background-repeat: no-repeat;
 	/*width: 100%;*/
 }
+.servicekbtn{
+	margin-bottom: 15px;
+    border-radius: 20px;
+    color: #fff;
+}
+.servicekbtn:focus{
+  outline: 0px auto -webkit-focus-ring-color!important;
+}
