Priyanka adding changes

--- a/ui/website/src/allBlocks/BlogPagecomponent/BlogPagecomponent.css
+++ b/ui/website/src/allBlocks/BlogPagecomponent/BlogPagecomponent.css
@@ -71,7 +71,6 @@ margin-top: 24px !important;
 .panelBody{
   color: #000;
   background-color: #fff !important;
-  height: 1200px;
   box-shadow: 0 10px 29px rgba(92,141,255,.22);
 }
 /*PL*/
@@ -130,7 +129,7 @@ margin-top: 24px !important;
   color:#777;
   font-size: 20px;
 }
-.panel-group .panel-heading+.panel-collapse>.list-group, .panel-group .panel-heading+.panel-collapse>.panelBody{
+.panel-group .panel-heading+.panel-collapse>.list-group, .panel-group .panel-heading+.panel-collapse>.panel-body{
   border: none !important;
 }
 .panel-collapse  +.panel-heading>.blogImgContainerInner{
@@ -138,4 +137,7 @@ margin-top: 24px !important;
 }
 .ht1100{
   height: 1100px;
+}
+.blankBox{
+  height: 100px;
 }
