--- a/ui/website/src/common/Header/Header.css
+++ b/ui/website/src/common/Header/Header.css
@@ -64,10 +64,12 @@ nav a {
   font-size: 15px;
   line-height: 35px;
   text-decoration: none;
-  text-transform: uppercase;
+  text-transform: capitalize;
   font-weight: bold;
 }
-
+.headerTitle {
+  text-transform: uppercase !important;
+}
 nav ul li ul li:hover { background: #eee; }
 
 nav a:hover { color: #f08f00;
@@ -94,25 +96,33 @@ nav ul ul li {
 }
 
 nav ul ul ul li {
-  width:322px;
+  width:312px;
   position: relative;
   top: -35px;
-  left: 284px;
+  left: 246px;
   background-color: #fff;
 }
 nav ul ul ul ul li {
+  width: 300px;
+  position: relative;
+  top: -35px;
+  left: -300px;/*
   width:360px;
   position: relative;
   top: -35px;
-  left: -350px;
+  left: -350px;*/
   z-index: 100;
   background-color: #fff;
 }
 nav ul ul ul ul ul li {
-  width:310px;
+  width: 270px;
   position: relative;
   top: -35px;
-  left: -305px;
+  left: -270px;
+  /*width:310px;
+  position: relative;
+  top: -35px;
+  left: -305px;*/
   background-color: #fff;
 }
 
