--- a/ui/website/src/allBlocks/BlogContent/BlogContent.css
+++ b/ui/website/src/allBlocks/BlogContent/BlogContent.css
@@ -1,4 +1,4 @@
-.blogContentDiv p{
+.blogContentDiv p, .blogContentDiv li{
 	font-family: 'Raleway', sans-serif ;
 	font-size: 16px !important;
 	line-height: 25px;
@@ -12,4 +12,9 @@
     height: 460px;
     border-radius: 8px;
     margin-top: 50px;
+}
+.blogSubImg{
+    height: 270px;
+    border-radius: 5px;
+    width: 100%;
 }
