--- a/ui/website/src/allPages/ContactPage/Contactpage.css
+++ b/ui/website/src/allPages/ContactPage/Contactpage.css
@@ -29,7 +29,7 @@ margin-bottom: 50px;
 }
 
 .contactcontbackimg{
-  background-image: url("/images/contactussocial.png");
+  background-image: url("/images/Contact-Us.png");
   background-size: 100%;
   height: 450px;
   background-repeat: no-repeat;
@@ -50,17 +50,17 @@ margin-bottom: 50px;
 
 .contacticon2{
     padding: 5px 6px;
-    background-color: #005b99;
+    background-color: #009de2;
     font-size: 35px;
-    border: 5px solid #005b99;
+    border: 5px solid #009de2;
     border-radius: 50%;
     color: #fff;
 }
 .contacticon21{  
   padding: 5px 12px;
-    background-color: #005b99;
+    background-color: #009de2;
     font-size: 35px;
-    border: 5px solid #005b99;
+    border: 5px solid #009de2;
     border-radius: 50%;
     color: #fff;
   }
