--- a/ui/website/src/allBlocks/BlogContent/BlogContent.css
+++ b/ui/website/src/allBlocks/BlogContent/BlogContent.css
@@ -13,8 +13,83 @@
     border-radius: 8px;
     margin-top: 50px;
 }
+.blogSubImg:hover{
+	transform: scale(0.8, 0.8);
+    overflow-wrap: hidden;
+    transition-duration: 0.20s;
+}
 .blogSubImg{
     height: 270px;
     border-radius: 5px;
     width: 100%;
+}
+.blogImgContainerInner{
+  height: 450px;
+  width: 100%;
+  /*border-radius: 10px;*/
+  margin-top: 70px;
+  margin-bottom: 15px;
+  padding: 0px;
+  background-color: #555; 
+
+
+}
+.blogImgContainerInner:hover img{
+	opacity: 0.3;
+  /*transform: scale(1);*/
+}
+
+.blogImgContainerInner img {
+	position: relative;
+  /*transform: scale(2);*/
+	opacity: 1;
+    height: 450px;
+    width: 100%;
+}
+.middle {
+  transition: .5s ease;
+  opacity: 0;
+  /*position: absolute;*/
+  /*top: -50%;*/
+  /*left: 50%;*/
+  /*transform: translate(-50%, -50%);*/
+  /*-ms-transform: translate(-50%, -50%);*/
+  text-align: center;
+}
+
+
+
+.blogImgContainerInner:hover .middle {
+  opacity: 1;
+}
+
+.blogimgtext {
+	color: #fff;
+	font-weight: bold;
+	font-size: 35px;
+	padding: 16px 32px;
+	position: absolute;
+	 /*left: 42%; */
+	top: 250px;
+	text-align: center;
+}
+.header-scrolldown i :hover{
+	top: 490px;
+    transition: transform 0.2s ease-in-out, opacity 0.2s linear 0.2s !important;
+}
+.header-scrolldown i {
+	color: #fff;
+	font-size : 30px;
+}
+.header-scrolldown {
+    position: absolute;
+    left: 50%;
+    z-index: 100;
+    top: 480px;
+    transition: transform 0.2s ease-in-out, opacity 0.2s linear 0.2s !important;
+}
+.header-scrolldown:hover {
+    transform: translateY(5px);
+    opacity: .8 !important;
+    transition: transform 0.2s ease-in-out, opacity 0.2s linear 0.2s !important;
 }
