--- a/ui/website/src/allBlocks/Blogcomponents/Blogcomponents.css
+++ b/ui/website/src/allBlocks/Blogcomponents/Blogcomponents.css
@@ -1,3 +1,12 @@
+.customPanel{
+  /*border: 1px solid;*/
+  height: 380px !important;
+  padding: 0px;
+  border-radius: 0px !important;
+  margin-top: 15px;
+  /*box-shadow: 0 10px 29px rgba(92,141,255,.22);*/
+
+}
 
 .customDefaultPanel>.panel-heading {
   color: #333;
@@ -13,7 +22,7 @@
 }
 .customDefaultPanel>.panel-heading a {
   display: block;
-  padding: 10px 15px;
+  /*padding: 10px 15px;*/
 }
 
 .customDefaultPanel>.panel-heading a:after {
@@ -47,7 +56,7 @@
     margin-right: 50px;
     padding: 35px;
     margin-top: 95px;
-    border-radius: 5px;
+    /*border-radius: 5px;*/
     background-color: #0076d8;
     color:#fff;
 
@@ -61,7 +70,7 @@
     padding: 35px;
     box-shadow: 5px -7px 4px -1px #cde2f3;
 
-    border-radius: 5px;
+    /*border-radius: 5px;*/
     background-color: #0076d8;
     color:#fff;  transform: rotate(90deg);
 }
@@ -74,63 +83,85 @@ margin-top: 24px !important;
   box-shadow: 0 10px 29px rgba(92,141,255,.22);
 }
 /*PL*/
-.customPanel{
-  height: 250px !important;
-  border-radius: 10px !important;
-  box-shadow: 0 10px 29px rgba(92,141,255,.22);
-
-}
 .mt80{
   margin-top:70px !important;
 }
-.customPanel label{
-  
-  margin-top:8px;
-  margin-left: 20px;
-}
-.customPanel a{
+
+.customDefaultPanel a{
   text-decoration: none !important;
 }
 .blogImgContainer{
   height: 220px;
-  border-radius: 10px;
+  /*border-radius: 10px;*/
   margin-top: 15px;
   margin-bottom: 15px;
+  padding: 0px;
 
 }
-.blogImgContainerInner{
-  height: 550px;
-  border-radius: 10px;
-  margin-top: 15px;
-  margin-bottom: 15px;
+
+.blogImgContainer {
+  position: relative;
+  background-color: #555; 
 
 }
 .blogImgContainer img{
   height: 100%;
   width: 100%;
-    border-radius: 5px;
+  opacity: 1;
+  transition: .5s ease;
+  backface-visibility: hidden;
+}
 
-}.blogImgContainerInner img{
+.blogImgContainer:hover img {
+  opacity: 0.3;
+}
+
+.blogImgContainerInner{
+  height: 550px;
+  /*border-radius: 10px;*/
+  margin-top: 15px;
+  margin-bottom: 15px;
+  padding: 0px;
+
+}/*
+.blogImgContainer img:hover{
+  transform: scale(0.8, 0.8);
+  overflow-wrap: hidden;
+  transition-duration: 0.20s;
+}*/
+
+.blogImgContainerInner img{
   height: 550px;
   width: 100%;
-    border-radius: 5px;
+    /*border-radius: 5px;*/
 
 }
 .blogTitle{
-  font-weight: bold;  
-  font-size: 21px;
+  font-weight: normal;  
+  font-size: 16px;
   overflow-wrap: break-word;
   word-wrap: break-word;
-  color: #0076d8 !important;
+  color: #303133 !important;
+  /*color: #0076d8 !important;*/
+  padding: 0px;
+  margin-top: 5px;
+}
+.blogTitle:hover{
+  color: #f19000 !important;
+  transition-duration: 0.7s;
+  cursor: pointer;
 }
 .likeDiv{
-  color:#777;
-  font-size: 20px;
+  color:#404444;
+  font-size: 16px;
+  margin-top: 5px;
   font-weight: normal;
 }
 .blogDate{
-  color:#777;
-  font-size: 20px;
+  color:#303133;
+  font-size: 12px;
+  font-weight: bold;
+  margin-top: 5px;
 }
 .panel-group .panel-heading+.panel-collapse>.list-group, .panel-group .panel-heading+.panel-collapse>.panel-body{
   border: none !important;
@@ -144,3 +175,16 @@ margin-top: 24px !important;
 .blankBox{
   height: 50px;
 }
+.blogContent{
+  font-size: 15px;
+  color: #777;
+  font-weight: normal;
+  /*overflow-wrap: normal !important;*/
+  text-align: justify;
+  margin-top: 10px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+
+}
+
+
