--- a/ui/website/src/allBlocks/Commonstream/Commonstream.css
+++ b/ui/website/src/allBlocks/Commonstream/Commonstream.css
@@ -1,31 +1,51 @@
 .para10{
   position: relative;
-  left:-730px;
-  transform: rotate(20deg);
+  top: 800px;
+  /*transform: rotate(20deg);*/
   transition-duration: 2s;
 
 }
 
 .para11{
   position: relative;
-  left: 730px;
-  transform: rotate(-20deg);
+  top: 800px;
+  /*transform: rotate(-20deg);*/
   transition-duration: 2s;
 
 }
+.para12{
+  position: relative;
+  top: 800px;
+  /*transform: rotate(-20deg);*/
+  transition-duration: 2s;
 
+}
 .paraeffect{
   position: relative;
-  left :0px;
+  top :0px;
+  transform: rotate(0deg);
+  transition-duration: 0.9s;
+  margin-inline-start: 45px;
+  margin-inline-end: 40px;
+}
+.paraeffect12{
+  position: relative;
+  top :0px;
   transform: rotate(0deg);
   transition-duration: 0.9s;
 }
-
+/*
 .para12{
 	opacity: 0;
 	transition-duration: 2s;
-}
+}*/
 .para12effect{
 	opacity: 1;
 	transition-duration: 1.5s;
+}
+.downTitle{
+  font-size: 25px;
+}
+.streamImg{
+  margin-bottom: 5px;
 }
