--- a/ui/website/src/allBlocks/Ourjournyblock/Ourjournyblock.css
+++ b/ui/website/src/allBlocks/Ourjournyblock/Ourjournyblock.css
@@ -165,7 +165,7 @@ color: #fff;
   z-index: 3;
   height: 0px;
   background: transparent;
-  overflow: hidden;
+  /*overflow: hidden;*/
   max-height: 1590px;
   /*left: -95px;*/
   right: 0px;
