--- a/ui/website/src/allBlocks/BlogContent/BlogContent.css
+++ b/ui/website/src/allBlocks/BlogContent/BlogContent.css
@@ -6,7 +6,6 @@
 }
 .imgContainerInner{
 	height: auto;
-	
 }
 .blogcontenttext{
     height: 460px;
@@ -30,66 +29,136 @@
   margin-top: 70px;
   margin-bottom: 15px;
   padding: 0px;
-  background-color: #555; 
-
+  background-color: #111; 
 
 }
 .blogImgContainerInner:hover img{
-	opacity: 0.3;
   /*transform: scale(1);*/
 }
 
 .blogImgContainerInner img {
 	position: relative;
+	opacity: 0.3;
   /*transform: scale(2);*/
-	opacity: 1;
+	/*opacity: 1;*/
     height: 450px;
     width: 100%;
 }
 .middle {
   transition: .5s ease;
-  opacity: 0;
+  /*opacity: 0;*/
   /*position: absolute;*/
-  /*top: -50%;*/
-  /*left: 50%;*/
-  /*transform: translate(-50%, -50%);*/
-  /*-ms-transform: translate(-50%, -50%);*/
-  text-align: center;
+  margin-left: 15px;
 }
 
 
 
-.blogImgContainerInner:hover .middle {
-  opacity: 1;
+.blogImgContainerInner:hover .blogimgtext {
+  /*opacity: 1;*/
 }
 
-.blogimgtext {
+.middle .blogfb a:hover, .middle .blogtwit a:hover, .middle .blogLin a:hover{
+  color: #009de2;
+}
+
+.middle .blogfb a, .middle .blogtwit a, .middle .blogLin a{
+  color: #fff;
+  font-weight: bold;
+  font-size: 20px;
+  padding: 10px 0px 0px 0px;
+}
+.middle .blogtwit a{
+  position: absolute;
+   /*left: 42%; */
+  top: 10px;
+  right: 60px;
+}
+.middle .blogfb a{
+  position: absolute;
+   /*left: 42%; */
+  top: 5px;
+  right: 40px;
+}
+.middle .blogLin a{
+  position: absolute;
+   /*left: 42%; */
+  top: 8px;
+  right: 0px;
+}
+
+
+.blogimgtext{
 	color: #fff;
 	font-weight: bold;
 	font-size: 35px;
 	padding: 16px 32px;
 	position: absolute;
 	 /*left: 42%; */
-	top: 250px;
+	top: 200px;
 	text-align: center;
+}
+.blogdatetext{
+  color: #fff;
+  font-weight: bold;
+  font-size: 15px;
+  padding: 16px 32px;
+  position: absolute;
+   /*left: 42%; */
+  top: 260px;
+  text-align: center;
 }
 .header-scrolldown i :hover{
 	top: 490px;
-    transition: transform 0.2s ease-in-out, opacity 0.2s linear 0.2s !important;
+  transition: transform 0.2s ease-in-out, opacity 0.2s linear 0.2s !important;
 }
 .header-scrolldown i {
 	color: #fff;
 	font-size : 30px;
 }
 .header-scrolldown {
-    position: absolute;
-    left: 50%;
-    z-index: 100;
-    top: 480px;
-    transition: transform 0.2s ease-in-out, opacity 0.2s linear 0.2s !important;
+  position: absolute;
+  left: 50%;
+  z-index: 100;
+  top: 410px;
+  transition: transform 0.2s ease-in-out, opacity 0.2s linear 0.2s !important;
 }
 .header-scrolldown:hover {
-    transform: translateY(5px);
-    opacity: .8 !important;
-    transition: transform 0.2s ease-in-out, opacity 0.2s linear 0.2s !important;
+  transform: translateY(5px);
+  opacity: .8 !important;
+  transition: transform 0.2s ease-in-out, opacity 0.2s linear 0.2s !important;
 }
+
+.commentBox{
+  height: 160px;
+}
+
+.commentBoxbtn {
+  font-weight: 600;
+  padding: 10px 20px;
+  color: #fff;
+  margin-top: 10px;
+}
+
+.miniDiv1Filter img {
+  /*transform: scale(1);*/
+  cursor: pointer;
+  transition-duration: 0.5s;
+   animation: scale 5s ;
+   animation-iteration-count: 2;
+   animation-timing-function: linear;
+}
+.miniDiv1Filter{
+  overflow: hidden;
+  margin-bottom: 20px;
+}
+.miniDiv1Filter:hover img{
+  transform: scale(1.1);
+  cursor: pointer;
+  transition-duration: 0.5s;
+}
+
+@keyframes scale {
+  from {transform: scale(1.5)}
+  to {transform: scale(1)}
+}
+
