--- a/ui/website/src/common/Header/Header.css
+++ b/ui/website/src/common/Header/Header.css
@@ -1,3 +1,54 @@
+.contactBar{
+  position: absolute;
+  right: 5px;
+  background-color: #f19000;
+  width: 35px;
+  height: 30px;
+  color: #fff;
+  padding: 6px 8px 6px 6px ;
+  border-radius: 3px;
+  text-align: right;
+  cursor: pointer;
+  transition-duration: 0.7s;
+  transition: width 1s;
+  border: none;
+}
+.hovertext{
+  cursor: pointer;
+  color: #fff;
+  width : 100px;
+  right: 5px;
+  display: none;
+}
+/*div {
+  width: 100px;
+  height: 100px;
+  background: red;
+  transition: width 2s;
+}
+
+div:hover {
+  width: 300px;
+}
+*/
+.contactBar:hover i{
+  display: none;
+  font-size: 50px;
+}
+.contactBar:hover{
+  width: 130px;
+}
+.contactBar:hover .hovertext{
+  display: block;
+  cursor: pointer;
+  text-align: right;
+  font-weight: bold;
+  white-space: nowrap;
+}
+.fixedContactBar i{
+  font-weight: bolder;
+  font-size: 20px;
+}
 .headerflow{
     position: fixed;
   z-index: 10000;
