--- a/ui/website/src/allBlocks/BlogContent/BlogContent.css
+++ b/ui/website/src/allBlocks/BlogContent/BlogContent.css
@@ -2,7 +2,7 @@
 	font-family: 'Raleway', sans-serif ;
 	font-size: 16px !important;
 	line-height: 25px;
-	color:#666;
+	color:#303133;
 }
 .imgContainerInner{
 	height: auto;
@@ -13,9 +13,9 @@
     margin-top: 50px;
 }
 .blogSubImg:hover{
-	transform: scale(0.8, 0.8);
+	/*transform: scale(0.8, 0.8);
     overflow-wrap: hidden;
-    transition-duration: 0.20s;
+    transition-duration: 0.20s;*/
 }
 .blogSubImg{
     height: 270px;
@@ -29,7 +29,7 @@
   margin-top: 70px;
   margin-bottom: 15px;
   padding: 0px;
-  background-color: #111; 
+  background-color: #121212; 
 
 }
 .blogImgContainerInner:hover img{
@@ -64,25 +64,29 @@
 .middle .blogfb a, .middle .blogtwit a, .middle .blogLin a{
   color: #fff;
   font-weight: bold;
-  font-size: 20px;
-  padding: 10px 0px 0px 0px;
+  font-size: 22px;
+  top: 410px;
+
 }
 .middle .blogtwit a{
   position: absolute;
    /*left: 42%; */
-  top: 10px;
+  /*top: 10px;*/
+  padding: 12px 0px 0px 0px;
   right: 60px;
 }
 .middle .blogfb a{
   position: absolute;
    /*left: 42%; */
-  top: 5px;
+  /*top: 5px;*/
+  padding: 6px 0px 0px 0px;
   right: 40px;
 }
 .middle .blogLin a{
   position: absolute;
+  padding: 10px 0px 0px 0px;
    /*left: 42%; */
-  top: 8px;
+  /*top: 8px;*/
   right: 0px;
 }
 
