--- a/ui/website/src/common/Header/Header.css
+++ b/ui/website/src/common/Header/Header.css
@@ -1,3 +1,11 @@
+
+.closeButton{
+    color: #fff;
+    font-size: 15px;
+}
+.closeButton:hover{
+    color: #f00;
+}
 .contactBar{
   position: absolute;
   right: 5px;
