--- a/ui/website/src/allBlocks/Careerimpactcomponent/Careerimpact.css
+++ b/ui/website/src/allBlocks/Careerimpactcomponent/Careerimpact.css
@@ -259,8 +259,9 @@ font-size: 24px;
 }
 .position_title_4 a:visited * { color: #1eb0e9 !important; }
 
-
-
+.blockdefault {
+    border-color: #77a0d2;
+}
 .position_content4{
   display: inline-block;
   float: left;
