--- a/ui/website/src/allBlocks/Contactform/Contactform.css
+++ b/ui/website/src/allBlocks/Contactform/Contactform.css
@@ -10,21 +10,27 @@
 	}
 .sbtn{
     /*background: -webkit-linear-gradient(left,#ffc600 0%,#ff4200 50%,#ffc600 100%);*/
-    height: 50px;
-    background-color: #009de2 !important;
-    border-radius: 25px !important;
     color: #FFF!important;
-    margin-top: 15px;
-    font-weight: 600;
-    font-size: 16px;
 }
 .sbtn:focus{    
-    border: none;
+    border: none !important;
+    box-shadow: none !important;
 }.form-control{
 	height: 44px!important;
 }
 .ContactmodalContent{
-  background-image: linear-gradient(to bottom right, #f19000, #f19000cf);
+  /*background-image: linear-gradient(to bottom right, #f19000, #f19000cf);*/
+  background-image: linear-gradient(to bottom right,#f19000d9,rgba(241, 144, 0, 0.45)); 
   margin-top: 10%;
   height: 480px;
+  z-index: 15000;
 }
+.padd10{
+  padding-top: 10px;
+}
+.panel-title>.small, .panel-title>.small>a, .panel-title>a, .panel-title>small, .panel-title>small>a {
+    color: #f57507;
+    font-weight: 550;
+}
+
+
