--- a/ui/website/src/allBlocks/Maincomponent/Maincomponent.css
+++ b/ui/website/src/allBlocks/Maincomponent/Maincomponent.css
@@ -40,11 +40,13 @@
 .iogimgblock2{
    width: 81%;
     padding-top: 90px;
-    padding-left: 15px;
+    padding-left: 13px;
     margin-left: 1px;
     height: 747px;
 }
-
+.careerBox{
+    box-shadow: 0 10px 29px rgba(92,141,255,.22);
+}
 .iogblock2text{
     padding-top: 91px;
     /* padding-bottom: 112px; */
@@ -73,11 +75,12 @@
 
 .iogblock3text{
     font-size: 15px;
-    padding-left: 87px;
+    /*padding-left: 87px;*/
     margin-left: 8px;
     width: 107%;
     height: 362px;
-    padding-top: 97px;
+    /*padding-top: 97px;*/
+    padding: 80px;
     /* margin-top: 82px; */
 }
 
@@ -177,7 +180,7 @@
 }
 
 .bckgblck_color_blue{
-    background-color: #2a5cab;
+    background-color: #1378d4;
     color: #fff;
 }
 
