--- a/ui/website/src/allBlocks/Contactform/Contactform.css
+++ b/ui/website/src/allBlocks/Contactform/Contactform.css
@@ -1,3 +1,9 @@
+.contactformBtn{
+  font-weight: 600;
+  padding: 10px 20px;
+  margin-top: 15px;
+  color: #fff
+}
 .cuformWall{
 	height: 500px;
 	/*background-color: #aaa;*/
@@ -15,8 +21,6 @@
 .sbtn:focus{    
     border: none !important;
     box-shadow: none !important;
-}.form-control{
-	height: 44px!important;
 }
 .ContactmodalContent{
   /*background-image: linear-gradient(to bottom right, #f19000, #f19000cf);*/
