--- a/ui/website/src/allPages/ContactPage/Contactpage.css
+++ b/ui/website/src/allPages/ContactPage/Contactpage.css
@@ -7,7 +7,7 @@
 }
 .contactcontent2-wrap{
   margin-top:100px;
-  margin-bottom: 50px;
+  margin-bottom: 3px !important;
   color: #fff;
   /*background-image: url("/images/contactusbg.png");*/
   background-size: 100% 100%;
