--- a/ui/website/src/allBlocks/BlogContent/BlogContent.css
+++ b/ui/website/src/allBlocks/BlogContent/BlogContent.css
@@ -71,12 +71,16 @@
   top: 410px;
 
 }
-.middle .blogtwit a{
+.blogtwit{
+}
+.middle .blogtwit {
   position: absolute;
-   /*left: 42%; */
+   left: 90%; 
   /*top: 10px;*/
   padding: 12px 0px 0px 0px;
-  right: 60px;
+  /*right: 60px;*/
+  top: 400px;
+
 }
 .middle .blogfb .fb{
   position: absolute;
