--- a/ui/website/src/common/Header/Header.css
+++ b/ui/website/src/common/Header/Header.css
@@ -271,7 +271,7 @@ nav ul li {
 }
 
 .headerlogo img{
-  margin-top: 15px;
+  /*margin-top: 15px;*/
   height: 75px;
 }
 
@@ -320,3 +320,6 @@ dropdown-submenu {
 .geoHover:hover~ul>li{
   z-index: 300;
 }
+
+
+/*Mega menu css*/
